[package]
name = "structx"
version = "0.1.5"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = [ "struct", "anonymous", "named", "arguments", "lens" ]
readme = "README.md"
repository = "https://github.com/oooutlk/structx"
documentation = "https://docs.rs/structx"
categories = [ "rust-patterns" ]
description = "Simulating anonymous struct and named arguments in Rust."

[build-dependencies]
inwelling = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","parsing","visit","visit-mut"] }

[dependencies]
structx_derive = { path = "../structx_derive", version = "^0.1.3" }
lens-rs = { version = "0.3", features = ["structx"], optional = true }
