[package]
name = "structx_derive"
version = "0.1.1"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = [ "struct", "anonymous", "structural", "named", "arguments" ]
readme = "README.md"
repository = "https://github.com/oooutlk/structx"
documentation = "https://docs.rs/structx_derive"
categories = [ "rust-patterns" ]
description = "Macros for anonymous struct and named arguments."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full","visit","visit-mut"] }

[features]
lens = []
