[package]
name = "structx_test"
version = "0.1.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2018"
publish = false

[dependencies]
structx = { path = "../structx", version = "0.1" }
lens-rs = { version = "0.3", features = ["structx"], optional = true }

[package.metadata.inwelling-lens-rs]
feature = "lens"

[package.metadata.inwelling]
structx = true
lens-rs_generator = true

[features]
lens = [ "lens-rs", "structx/lens-rs" ]
