[package]
name = "structx_test"
version = "0.1.8"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2021"
publish = false

[dependencies]
structx = { path = "../structx", version = "0.1.8" }
lens-rs = { version = "0.3", features = ["structx"], optional = true }

[build-dependencies]
inwelling = { path = "../../inwelling", version = "0.5" }

[package.metadata.inwelling]
structx = true
lens-rs_generator = true

[features]
lens = [ "lens-rs", "structx/lens-rs" ]
